cmake_minimum_required(VERSION 2.8)
project(yolo_ncnn)
# ncnn
set(ncnn_install_dir "/home/app/ncnn/build/install")
set(ncnn_DIR "${ncnn_install_dir}/lib/cmake/ncnn")
find_package(ncnn REQUIRED)
# open cv
find_package( OpenCV REQUIRED )
add_executable(yolo_ncnn main.cpp)
add_executable(yolo_forward yolov5.cpp)

if(ncnn_FOUND)
    message(STATUS "ncnn library: ${ncnn_INSTALL_PATH}")
    message(STATUS "    version: ${ncnn_VERSION}")
    message(STATUS "    libraries: ${ncnn_LIBS}")
    message(STATUS "    include path: ${ncnn_INCLUDE_DIRS}")
    target_link_libraries(yolo_ncnn ncnn)
endif()
if(OpenCV_FOUND)
    message(STATUS "OpenCV library: ${OpenCV_INSTALL_PATH}")
    message(STATUS "    version: ${OpenCV_VERSION}")
    message(STATUS "    libraries: ${OpenCV_LIBS}")
    message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
    include_directories( ${OpenCV_INCLUDE_DIRS} )
    target_link_libraries(yolo_ncnn ${OpenCV_LIBS} )
endif()
